# Gambler

./: CMakeLists.txt  README  README.md
Classes/GUI/: GUI.cpp  GUI.hpp
Classes/GUIunit/: GUIunit.cpp  GUIunit.hpp
Classes/StateMachine/: StateMachine.cpp  StateMachine.hpp
GUIunits/Drum/: Drum.cpp  Drum.hpp
GUIunits/InfoScreen/: InfoScreen.cpp  InfoScreen.hpp
Libs/ImGUI/backend/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h
Libs/ImageLoader/: ImageLoader.cpp  ImageLoader.hpp
Libs/MiniLib/: MiniLib.cpp  MiniLib.hpp
Libs/STD_img/: std_image.h
Source/: main.cpp
States/Idle/: StateIdle.cpp  StateIdle.hpp
States/Result/: StateResult.cpp  StateResult.hpp
States/SlowDown/: StateSlowDown.cpp  StateSlowDown.hpp
States/SpeedUp/: StateSpeedUp.cpp  StateSpeedUp.hpp
States/Working/: StateWorking.cpp  StateWorking.hpp
